--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <script>
     // === Ajuste a URL do seu webhook n8n ===
-    const webhookURL = 'https://teste.maplebearjardins.pro/webhook-test/0fdc2b86-d512-49fa-8091-24ffde75cb1f';
+    const webhookURL = 'https://webhook.maplebearjardins.pro/webhook/0fdc2b86-d512-49fa-8091-24ffde75cb1f';
 
     // === Elementos ===
     const chat = document.getElementById('chat');
