--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Mini Chat com Áudio — com Usuário</title>
+  <title>Ral Comunicação Agenda</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body{font-family:Arial, sans-serif;background:#f2f2f2;margin:0;padding:0;color:#222;}
